--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/estilos.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -11,16 +12,57 @@
     <h2>Sobre nós</h2>
     <img class="img-responsive" src="assets/img/empresa.jpg" alt="">
 
-    <h2 data-toggle="collapse" data-target="#primeiro-paragrafo">Desde 1935</h2>
-    <p id="primeiro-paragrafo" class="collapse">Desde 1935 trazendo casas, mansões e prédios lindos para o mundo.</p>
+    <div id="paineis-sobre" class="panel-group">
 
+        <div class="panel panel-default">
 
-    <h2 data-toggle="collapse" data-target="#segundo-paragrafo">Preços acessíveis</h2>
-    <p id="segundo-paragrafo" class="collapse">Preços a partir de R$ 1000,00.</p>
+            <div class="panel-heading">
+                <h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo"
+                    data-parent="#paineis-sobre">Desde 1935</h3>
+            </div>
 
+            <div id="primeiro-paragrafo" class="collapse in">
+                <div class="panel-body">
+                    <p>Desde 1935 trazendo casas, mansões e prédios lindos para o
+                        mundo.</p>
+                </div>
+            </div>
 
-    <h2 data-toggle="collapse" data-target="#terceiro-paragrafo">Alegria em colaborar para um mundo mais bonito</h2>
-    <p id="terceiro-paragrafo" class="collapse">Trazendo alegria para a vida das pessoas que tem dinheiro para gastar.</p>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" data-toggle="collapse" data-target="#segundo-paragrafo"
+                    data-parent="#paineis-sobre">Preços acessíveis</h3>
+            </div>
+            <div id="segundo-paragrafo" class="collapse">
+                <div class="panel-body">
+                    <p>Preços a partir de R$ 1000,00.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+
+            <div class="panel-heading">
+                <h3 class="panel-title" data-toggle="collapse" data-target="#terceiro-paragrafo"
+                    data-parent="#paineis-sobre">Alegria em colaborar
+                    para
+                    um mundo
+                    mais bonito</h3>
+            </div>
+            <div id="terceiro-paragrafo" class="collapse">
+                <div class="panel-body">
+                    <p>Trazendo alegria para a vida das pessoas que tem dinheiro
+                        para
+                        gastar.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
 
 
 </div>
