--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h2>Sobre nós</h2>
     <img class="img-responsive" src="assets/img/empresa.jpg" alt="">
 
-    <div id="paineis-sobre" class="panel-group">
+    <div id="paineis-sobre-nos" class="panel-group">
 
         <div class="panel panel-default">
 
             <div class="panel-heading">
                 <h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo"
-                    data-parent="#paineis-sobre">Desde 1935</h3>
+                    data-parent="#paineis-sobre-nos">Desde 1935</h3>
             </div>
 
             <div id="primeiro-paragrafo" class="collapse in">
@@ -33,7 +33,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title" data-toggle="collapse" data-target="#segundo-paragrafo"
-                    data-parent="#paineis-sobre">Preços acessíveis</h3>
+                    data-parent="#paineis-sobre-nos">Preços acessíveis</h3>
             </div>
             <div id="segundo-paragrafo" class="collapse">
                 <div class="panel-body">
@@ -46,7 +46,7 @@
 
             <div class="panel-heading">
                 <h3 class="panel-title" data-toggle="collapse" data-target="#terceiro-paragrafo"
-                    data-parent="#paineis-sobre">Alegria em colaborar
+                    data-parent="#paineis-sobre-nos">Alegria em colaborar
                     para
                     um mundo
                     mais bonito</h3>
@@ -62,8 +62,49 @@
     </div>
 </div>
 
-</div>
+<div class="container">
 
+    <h2>Nossos Projetos</h2>
+
+    <figure class="thumbnail">
+        <img class="img-responsive" src="assets/img/projetos/casa-castelo.png" alt="Casa Castelo/">
+        <figcaption class="caption">
+            <h3>Casa Castelo</h3>
+            <p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+        </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+        <img class="img-responsive" src="assets/img/projetos/casa-lago.png" alt="Casa Lago/">
+        <figcaption class="caption">
+            <h3>Casa Lago</h3>
+            <p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>
+        </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+        <img class="img-responsive" src="assets/img/projetos/mercado-marapira.png" alt="Casa Marapira/">
+        <figcaption class="caption">
+            <h3>Mercado Marapira</h3>
+            <p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.
+        </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+        <img class="img-responsive" src="assets/img/projetos/palacio-dionisio.png" alt="Palácio Dionísio"/>
+        <figcaption class="caption">
+            <h3>Palácio Dionísio</h3>
+            <p>O palácio Dionísio foi eleito pela revista 'Grandes palácios' como o palácio mais lindo do mundo.</p>
+        </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+        <img class="img-responsive" src="assets/img/projetos/residencia-ludi.png" alt="Palácio Dionísio"/>
+        <figcaption class="caption">
+            <h3>Residência Ludi</h3>
+            <p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
+        </figcaption>
+    </figure>
 
 </div>
 
