--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
     </div>
 </section>
 
+<section class="container">
+    <h2>Vídeo Institucional</h2>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_0PL45xM__0" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+</section>
+
 <script src="assets/js/jquery.js"></script>
 <script src="assets/bootstrap/js/bootstrap.js"></script>
 
