--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@
     </div>
 </section>
 
+<section class="container">
+    <h2>Contato</h2>
+    <p>Entre em contato conosco</p>
+    <form>
+
+        <div class="form-group">
+            <label for="contato-nome">Nome:</label>
+            <input id="contato-nome" class="form-control" type="text" placeholder="Digite seu nome"/>
+        </div>
+
+
+        <div class="form-group">
+            <label for="contato-nome">E-mail:</label>
+            <div class="input-group">
+                <div class="input-group-addon">@</div>
+                <input id="contato-email" class="form-control" type="email" placeholder="Digite seu email"/>
+            </div>
+        </div>
+
+    </form>
+</section>
+
 <script src="assets/js/jquery.js"></script>
 <script src="assets/bootstrap/js/bootstrap.js"></script>
 
