--- a/index.html
+++ b/index.html
@@ -197,6 +197,30 @@
             </div>
         </div>
 
+        <div class="group-radio">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="tipo-pessoa" checked>
+                    Pessoa Física
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="tipo-pessoa">
+                    Pessoa Jurídica
+                </label>
+            </div>
+        </div><!--
+
+        --><select class="contato-select form-control">
+            <option disabled selected>Tipo de Situação</option>
+            <option>Casa</option>
+            <option>Apartamento</option>
+            <option>Mansão</option>
+        </select>
+
+        <button class="btn btn-primary" type="submit">Enviar</button>
+
     </form>
 </section>
 
