Criando o rodapé do nosso site

--- a/index.html
+++ b/index.html
@@ -213,13 +213,25 @@
         </div><!--
 
         --><select class="contato-select form-control">
-            <option disabled selected>Tipo de Situação</option>
-            <option>Casa</option>
-            <option>Apartamento</option>
-            <option>Mansão</option>
-        </select>
+        <option disabled selected>Tipo de Situação</option>
+        <option>Casa</option>
+        <option>Apartamento</option>
+        <option>Mansão</option>
+    </select>
 
         <button class="btn btn-primary" type="submit">Enviar</button>
+
+        <footer>
+            <address>
+                <strong>TopCasaFina Arquitetura</strong><br>
+                Rua Vergueiro, 3185, Vila Mariana<br>
+                São Paulo, SP<br>
+                Tel: (11) 5571-2751 ou 5083-3884
+            </address>
+            <address>
+                Email: contato.topcasafina@alura.com.br
+            </address>
+        </footer>
 
     </form>
 </section>
