--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 
 <body>
 
-<section class="container">
+<ul>
+    <li><a href="#sobre-nos">Sobre Nós</a></li>
+    <li><a href="#nossos-projetos">Nossos Projetos</a></li>
+    <li><a href="#depoimentos">Depoimentos</a></li>
+    <li><a href="#video">Vídeo</a></li>
+    <li><a href="#contato">Contato</a></li>
+</ul>
+
+<section id="sobre-nos" class="container">
     <h2>Sobre nós</h2>
     <img class="img-responsive" src="assets/img/empresa.jpg" alt="">
 
@@ -70,7 +78,7 @@
     </div>
 </div>
 
-<section class="container">
+<section id="nossos-projetos" class="container">
 
     <h2>Nossos Projetos</h2>
 
@@ -116,7 +124,7 @@
 
 </section>
 
-<section>
+<section id="depoimentos">
 
     <h2 class="container titulo-depoimento ">Depoimentos de Clientes</h2>
 
@@ -170,7 +178,7 @@
     </div>
 </section>
 
-<section class="container">
+<section id="video" class="container">
     <h2>Vídeo Institucional</h2>
     <div class="embed-responsive embed-responsive-16by9">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/_0PL45xM__0" frameborder="0"
@@ -178,7 +186,7 @@
     </div>
 </section>
 
-<section class="container">
+<section id="contato" class="container">
     <h2>Contato</h2>
     <p>Entre em contato conosco</p>
     <form>
@@ -217,8 +225,8 @@
         <option>Casa</option>
         <option>Apartamento</option>
         <option>Mansão</option>
-    </select>
 
+    </select>
         <button class="btn btn-primary" type="submit">Enviar</button>
 
         <footer>
