--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 
 <body>
 
-<ul>
-    <li><a href="#sobre-nos">Sobre Nós</a></li>
-    <li><a href="#nossos-projetos">Nossos Projetos</a></li>
-    <li><a href="#depoimentos">Depoimentos</a></li>
-    <li><a href="#video">Vídeo</a></li>
-    <li><a href="#contato">Contato</a></li>
-</ul>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <ul class="nav navbar-nav">
+            <li><a href="#sobre-nos">Sobre Nós</a></li>
+            <li><a href="#nossos-projetos">Nossos Projetos</a></li>
+            <li><a href="#depoimentos">Depoimentos</a></li>
+            <li><a href="#video">Vídeo</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+    </div>
+</nav>
 
 <section id="sobre-nos" class="container">
     <h2>Sobre nós</h2>
