Estilizando nosso menu usando o navbar

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 
 </section>
 
-<section id="depoimentos">
+<section id="depoimentos" class="container">
 
-    <h2 class="container titulo-depoimento ">Depoimentos de Clientes</h2>
+    <h2 class="titulo-depoimento ">Depoimentos de Clientes</h2>
 
     <!-- Wrapper for slides -->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
