--- a/index.html
+++ b/index.html
@@ -9,37 +9,39 @@
 
 <body>
 
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
+<header>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
 
-            <button type="button"
-                    class="navbar-toggle collapsed"
-                    data-toggle="collapse"
-                    data-target="#collapse-navbar"
-                    aria-expanded="false">
+                <button type="button"
+                        class="navbar-toggle collapsed"
+                        data-toggle="collapse"
+                        data-target="#collapse-navbar"
+                        aria-expanded="false">
 
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
 
-            </button>
+                </button>
 
-            <a class="navbar-brand" href="#">TopCasaFina Arquitetura</a>
+                <a class="navbar-brand" href="#">TopCasaFina Arquitetura</a>
 
+            </div>
+            <div id="collapse-navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#sobre-nos">Sobre Nós</a></li>
+                    <li><a href="#nossos-projetos">Nossos Projetos</a></li>
+                    <li><a href="#depoimentos">Depoimentos</a></li>
+                    <li><a href="#video">Vídeo</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </div>
         </div>
-        <div id="collapse-navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="#sobre-nos">Sobre Nós</a></li>
-                <li><a href="#nossos-projetos">Nossos Projetos</a></li>
-                <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#video">Vídeo</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    </nav>
+</header>
 
 <section id="sobre-nos" class="container">
     <h2>Sobre nós</h2>
