--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             </div>
         </div>
     </nav>
+
+    <div class="topCasaFina-banner">
+        <h1>TopCasaFina Arquitetura</h1>
+        <p>Projetando a casa dos sonhos desde 2000 A.C</p>
+        <button class="btn btn-primary">Contrate-nos agora</button>
+    </div>
+
 </header>
+
+
 
 <section id="sobre-nos" class="container">
     <h2>Sobre nós</h2>
