Consertando o bug do menu

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 
 <script src="assets/js/jquery.js"></script>
 <script src="assets/bootstrap/js/bootstrap.js"></script>
+<script src="assets/js/navbar-animation-fix.js"></script>
 
 </body>
 </html>
